# imgfingerprint

./: README.md  TRONCO.txt  autocalibrar_parametros_orb.cpp  build.sh  c.cpp  c10.cpp  c12.cpp  c2.cpp  c3.cpp  go.mod  go.sum  imghash.c  imghash.c.bkp  libserver.h  main.go  server.go  tronco.txt
DBoW2/: CMakeLists.txt
DBoW2/demo/: config.txt  dbow_crear_db-ng.cpp  dbow_crear_db.cpp  demo.cpp  demo.cpp.OK  demo.cpp.OK2  demo.cpp.OK3  demo.cpp.gpt  demo.cpp.gpt2  demo.cpp.old  demo.cpp.orig  demo.cpp.orig2  demo1.cpp  demo2.cpp  demo3.cpp  detectar_troncos.cpp  fingerprint_by_images-ng.cpp  fingerprint_by_images.cpp  gps-idea.txt  parametros.txt
DBoW2/include/: vars.h
imgsim/: ahash.go
